testsuite/tests/typing-objects-bugs/pr4018_bad.compilers.reference
File "pr4018_bad.ml", line 42, characters 11-17:
42 | let f (x : entity entity_container) = ()
                ^^^^^^
Error: This type entity = < destroy_subject : id subject; entity_id : id >
       should be an instance of type
         < destroy_subject : < add_observer : 'a entity_container -> 'c; .. >
                             as 'b;
           .. >
         as 'a
       Type
         id subject =
           < add_observer : (id subject, id) observer -> unit;
             notify_observers : id -> unit >
       is not compatible with type
         < add_observer : 'a entity_container -> 'c; .. > as 'b 
       Type (id subject, id) observer = < notify : id subject -> id -> unit >
       is not compatible with type
         'a entity_container =
           < add_entity : 'a -> 'c; notify : 'a -> id -> unit > 
       Types for method add_observer are incompatible
